# cosyne

./: LICENSE  README.md  cosyne.cabal
src/Numeric/: COSYNE.hs
